[package]
name = "proto"
version = "0.1.0"
authors = ["Adam Budziak <adambudziak@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["redis_pool"] }
mcl = "0.5.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.10"
redis = "0.14.0"
uuid = { version = "0.7", features = ["v4", "serde"] }
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
anyhow = "1.0"
sha3 = "0.8.2"
rust-crypto = "0.2.36"