[tool.poetry]
name = "exc1"
version = "0.1.0"
description = ""
authors = ["Adam Budziak <adambudziak@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipykernel = "^5.1"
matplotlib = "^3.1"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
